# punch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  punch.toml.example
.github/: PULL_REQUEST_TEMPLATE.md
crates/punch-api/: Cargo.toml
crates/punch-api/src/: lib.rs  openapi.rs  server.rs
crates/punch-api/src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs
crates/punch-api/src/routes/: a2a.rs  budget.rs  channels.rs  chat.rs  communication.rs  creed.rs  dashboard.rs  dashboard_ui.html  docs.rs  fighters.rs  gorillas.rs  health.rs  heartbeats.rs  metrics.rs  mod.rs  moves.rs  openai_compat.rs  stats.rs  tenants.rs  triggers.rs  troops.rs  workflows.rs
crates/punch-api/tests/: api_integration_test.rs  api_routes.rs
crates/punch-channels/: Cargo.toml
crates/punch-channels/src/: bridge.rs  lib.rs  onboarding.rs  router.rs  security.rs
crates/punch-channels/src/adapters/: bluesky.rs  dingtalk.rs  discord.rs  email.rs  feishu.rs  github.rs  google_chat.rs  irc.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  mod.rs  nostr.rs  reddit.rs  rocketchat.rs  signal.rs  slack.rs  sms.rs  teams.rs  telegram.rs  twitch.rs  webchat.rs  whatsapp.rs  zulip.rs
crates/punch-channels/tests/: bridge_integration_test.rs
crates/punch-cli/: Cargo.toml
crates/punch-cli/src/: cli.rs  main.rs
crates/punch-cli/src/commands/: channel.rs  chat.rs  config.rs  desktop.rs  fighter.rs  gorilla.rs  heartbeat.rs  init.rs  mod.rs  moves.rs  start.rs  stats.rs  status.rs  trigger.rs  tui.rs  version.rs  webview.rs  workflow.rs
crates/punch-desktop/: Cargo.toml
crates/punch-desktop/src/: app.rs  commands.rs  ipc.rs  lib.rs  main.rs  state.rs
crates/punch-extensions/: Cargo.toml
crates/punch-extensions/src/: lib.rs  plugin.rs  wasm_runtime.rs
crates/punch-gorillas/: Cargo.toml
crates/punch-gorillas/bundled/alpha/: GORILLA.toml
crates/punch-gorillas/bundled/brawler/: GORILLA.toml
crates/punch-gorillas/bundled/ghost/: GORILLA.toml
crates/punch-gorillas/bundled/heartbeat-notifier/: GORILLA.toml
crates/punch-gorillas/bundled/howler/: GORILLA.toml
crates/punch-gorillas/bundled/prophet/: GORILLA.toml
crates/punch-gorillas/bundled/scout-troop/: GORILLA.toml
crates/punch-gorillas/bundled/swarm/: GORILLA.toml
crates/punch-gorillas/src/: executor.rs  lib.rs  scheduler.rs  tasks.rs  triggers.rs
crates/punch-gorillas/src/runners/: data_sweeper.rs  health_monitor.rs  mod.rs  report_generator.rs
crates/punch-gorillas/tests/: gorilla_lifecycle.rs
crates/punch-kernel/: Cargo.toml
crates/punch-kernel/src/: a2a_executor.rs  agent_messaging.rs  background.rs  budget.rs  config_watcher.rs  event_bus.rs  heartbeat_scheduler.rs  lib.rs  metering.rs  metrics.rs  patterns.rs  registry.rs  ring.rs  scheduler.rs  shutdown.rs  swarm.rs  tenant_registry.rs  triggers.rs  troop.rs  workflow.rs  workflow_conditions.rs  workflow_loops.rs  workflow_validation.rs
crates/punch-kernel/tests/: budget_tenant.rs  config_tests.rs  coordination.rs  fighter_lifecycle.rs  gorilla_integration.rs  ring_integration_test.rs  tenant_integration.rs  workflow_e2e.rs  workflow_integration.rs
crates/punch-memory/: Cargo.toml
crates/punch-memory/src/: backup.rs  bouts.rs  channels.rs  consolidation.rs  creed.rs  embeddings.rs  fighters.rs  knowledge.rs  lib.rs  maintenance.rs  memories.rs  migrations.rs  substrate.rs  usage.rs
crates/punch-memory/tests/: persistence.rs
crates/punch-runtime/: Cargo.toml
crates/punch-runtime/src/: circuit_breaker.rs  context_budget.rs  driver.rs  fighter_loop.rs  guard.rs  http_pool.rs  lib.rs  mcp.rs  model_router.rs  session_repair.rs  tool_executor.rs  tools.rs
crates/punch-runtime/src/automation/: common.rs  mod.rs
crates/punch-runtime/tests/: driver_tests.rs  fighter_loop_tests.rs
crates/punch-skills/: Cargo.toml
crates/punch-skills/bundled-packs/developer/: SKILLPACK.toml
crates/punch-skills/bundled-packs/files/: SKILLPACK.toml
crates/punch-skills/bundled-packs/productivity/: SKILLPACK.toml
crates/punch-skills/bundled-packs/research/: SKILLPACK.toml
crates/punch-skills/bundled/angular/: SKILL.md
crates/punch-skills/bundled/api-design/: SKILL.md
crates/punch-skills/bundled/api-designer/: SKILL.md
crates/punch-skills/bundled/architect/: SKILL.md
crates/punch-skills/bundled/aws/: SKILL.md
crates/punch-skills/bundled/backend/: SKILL.md
crates/punch-skills/bundled/blockchain/: SKILL.md
crates/punch-skills/bundled/brand-voice/: SKILL.md
crates/punch-skills/bundled/ci-cd/: SKILL.md
crates/punch-skills/bundled/cloud-native/: SKILL.md
crates/punch-skills/bundled/code-review/: SKILL.md
crates/punch-skills/bundled/code-reviewer/: SKILL.md
crates/punch-skills/bundled/competitor-analysis/: SKILL.md
crates/punch-skills/bundled/compliance-checker/: SKILL.md
crates/punch-skills/bundled/computer-vision/: SKILL.md
crates/punch-skills/bundled/contract-reviewer/: SKILL.md
crates/punch-skills/bundled/cpp-expert/: SKILL.md
crates/punch-skills/bundled/cryptography/: SKILL.md
crates/punch-skills/bundled/csharp-expert/: SKILL.md
crates/punch-skills/bundled/customer-support/: SKILL.md
crates/punch-skills/bundled/daily-briefing/: SKILL.md
crates/punch-skills/bundled/data-analysis/: SKILL.md
crates/punch-skills/bundled/data-analyst/: SKILL.md
crates/punch-skills/src/: client.rs  lib.rs  loader.rs  lockfile.rs  marketplace.rs  packs.rs  publisher.rs  registry.rs  scanner.rs  verifier.rs
crates/punch-types/: Cargo.toml
crates/punch-types/src/: a2a.rs  approval.rs  audit.rs  browser.rs  capability.rs  cdp.rs  channel_notify.rs  config.rs  coordinator.rs  creed.rs  error.rs  event.rs  fighter.rs  gorilla.rs  hot_reload.rs  image_gen.rs  lib.rs  link.rs  media.rs  message.rs  model_catalog.rs  patch.rs  prompt_guard.rs  provider_health.rs  reply.rs  sandbox.rs  secret_store.rs  signing.rs  ssrf.rs  taint.rs  tenant.rs  tool.rs  tool_policy.rs  troop.rs  workspace.rs
crates/punch-types/tests/: security.rs
crates/punch-wire/: Cargo.toml
crates/punch-wire/src/: lib.rs
(+105 files in other folders)
