[package]
name = "punch-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The Arena — HTTP API server for the Punch Agent Combat System"

[dependencies]
punch-types = { version = "0.1.0", path = "../punch-types" }
punch-kernel = { version = "0.1.0", path = "../punch-kernel" }
punch-memory = { version = "0.1.0", path = "../punch-memory" }
punch-channels = { version = "0.1.0", path = "../punch-channels" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
punch-runtime = { version = "0.1.0", path = "../punch-runtime" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
