[package]
name = "punch-channels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Channel adapters for messaging platforms in the Punch Agent Combat System"

[dependencies]
punch-types = { version = "1.0.0", path = "../punch-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
lettre = { workspace = true }
futures = { workspace = true }
urlencoding = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
