[package]
name = "punch-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Punch Desktop — native desktop wrapper for the Punch Agent OS"

[[bin]]
name = "punch-desktop"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Internal crates
punch-types = { version = "0.1.0", path = "../punch-types" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
