[package]
name = "punch-extensions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP templates and credential vault for the Punch Agent Combat System"

[dependencies]
punch-types = { path = "../punch-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
