[package]
name = "punch-extensions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP templates, credential vault, and WASM plugin sandbox for the Punch Agent Combat System"

[dependencies]
punch-types = { version = "1.0.0", path = "../punch-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wat = { workspace = true }
