[package]
name = "punch-gorillas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Autonomous agent (Gorilla) system for the Punch Agent Combat System"

[dependencies]
punch-types = { version = "1.0.0", path = "../punch-types" }
punch-runtime = { version = "1.0.0", path = "../punch-runtime" }
punch-memory = { version = "1.0.0", path = "../punch-memory" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
