[package]
name = "punch-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent execution engine for the Punch Agent Combat System"

[dependencies]
punch-types = { version = "0.1.0", path = "../punch-types" }
punch-memory = { version = "0.1.0", path = "../punch-memory" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
punch-skills = { version = "0.1.0", path = "../punch-skills" }
punch-extensions = { version = "0.1.0", path = "../punch-extensions" }
walkdir = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
