[package]
name = "punch-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Skill/move system for the Punch Agent Combat System"

[dependencies]
punch-types = { version = "1.0.0", path = "../punch-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
