[package]
name = "punch-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types for the Punch Agent Combat System"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
glob = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
